[FT-13 Tasl] Task basic logic add.
